Finish task feature working now, new bug: grouping not working on smaller screen

--- a/src/index.css
+++ b/src/index.css
@@ -254,11 +254,6 @@ footer img {
         padding-bottom: .5rem;
     }
 
-    .menu .dropdown {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
 
     #sort-check-box{ 
         text-align: left;
